fix: table overflow
CB-247

--- a/webapp/packages/core-theming/src/styles/_table.scss
+++ b/webapp/packages/core-theming/src/styles/_table.scss
@@ -12,10 +12,15 @@
     min-width: 100%;
     text-align: left;
     border-collapse: collapse;
+    table-layout: fixed;
 
     &[use|size="big"] {
       > thead > tr > th {
         height: 54px;
+
+        &[use|min] {
+          width: 46px;
+        }
       }
 
       > tbody > tr > td {
@@ -53,6 +58,7 @@
   }
 
   th {
+    box-sizing: border-box;
     white-space: nowrap;
     padding: 16px;
     height: 36px;
@@ -64,7 +70,7 @@
     text-decoration: none !important;
 
     &[use|min] {
-      width: 1%;
+      width: 28px;
     }
 
     &:last-child {
@@ -74,6 +80,7 @@
 
   td {
     position: relative;
+    box-sizing: border-box;
     height: 28px;
     padding: 0 16px;
     transition: padding ease-in-out 0.24s;
